--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: cornsilk;">
+<body style="background-color: pink;">
     <marquee direction="left"><h1> Jó estét Tanár Úr!</h1></marquee>
     <p class="main.para"></p> Dani Zita vagyok
     <p class="main.para"></p> 10.D osztályos tanuló...
