--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p class="main.para"></p> Dani Zita vagyok
     <p class="main.para"></p> 10.D osztályos tanuló...
     <p class="main.para"></p>. 9 éve kézilabdázok 
-    <p class="main.para"></p>szeretem a kutyákat XD <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.zooplus.hu%2Fmagazin%2Fkutya-magazin%2Fkutyafajtak%2Fnemetjuhasz&psig=AOvVaw2yNjyQ2j7TNP6LF0C_5nnQ&ust=1667467986724000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCNif3ruYj_sCFQAAAAAdAAAAABAD" width="150">
+    <p class="main.para"></p>szeretem a kutyákat XD <img src="németjuhász.jpg" width="150">
     <p id="kep"> Egy kép rólam </p>
       <button type="button" onclick="document.getElementById('kep').innerHTML='Hihi mégsincs kép'">Kép</button>
     <br>
