--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: pink;">
-    <marquee direction="left"><h1> Jó estét Tanár Úr!</h1></marquee>
+    <marquee direction="left"><h1> Jó napot Tanár Úr!</h1></marquee>
     <p class="main.para"></p> Dani Zita vagyok
     <p class="main.para"></p> 10.D osztályos tanuló...
     <p class="main.para"></p>. 9 éve kézilabdázok 
