--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
     <p class="main.para"></p>szeretem a kutyákat XD <img src="németjuhász.jpg" width="150">
     <br>
     <a href="https://github.com/danizita921/SAGVARI"><button>Github</button></a>
+<script>
+var b = document.querySelector("button");
+b.addEventListener("mouseover",change);
+function change()
+{
+    var i = Math.floor(Math.random()*675)+1;
+    var j = Math.floor(Math.random()*675)+1;
+    b.style.left = i+"px";
+    b.style.top = j+"px";
+}
+</script>
 </body>
 </html>
