--- a/index.html
+++ b/index.html
@@ -11,18 +11,9 @@
     <p class="main.para"></p> 10.D osztályos tanuló...
     <p class="main.para"></p>. 9 éve kézilabdázok 
     <p class="main.para"></p>szeretem a kutyákat XD <img src="németjuhász.jpg" width="150">
+    <p class="main.para"></p>Nekem is németjuhászom van, ő még csak 1 éves
+    <p class="main.para"></p> Kedvenc ételem a pizza
     <br>
     <a href="https://github.com/danizita921/SAGVARI"><button>Github</button></a>
-<script>
-var b = document.querySelector("button");
-b.addEventListener("mouseover",change);
-function change()
-{
-    var i = Math.floor(Math.random()*675)+1;
-    var j = Math.floor(Math.random()*675)+1;
-    b.style.left = i+"px";
-    b.style.top = j+"px";
-}
-</script>
 </body>
 </html>
