--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <marquee direction="left"><h1> Jó napot Tanár Úr!</h1></marquee>
     <p class="main.para"></p> Dani Zita vagyok
     <p class="main.para"></p> 10.D osztályos tanuló...
-    <p class="main.para"></p>. 9 éve kézilabdázok 
+    <p class="main.para"></p>. 9 éve kézilabdázok <img src="kezi.jpg" width="150">
     <p class="main.para"></p>szeretem a kutyákat XD <img src="németjuhász.jpg" width="150">
     <p class="main.para"></p>Nekem is németjuhászom van, ő még csak 1 éves
-    <p class="main.para"></p> Kedvenc ételem a pizza
+    <p class="main.para"></p> Kedvenc ételem a pizza <img src="pizza.jpg" width="150">
     <br>
     <a href="https://github.com/danizita921/SAGVARI"><button>Github</button></a>
 </body>
