--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="buttons">
             <a href ="rolam.html" class="btn btn-1">Ez vagyok én</a>
             <a href ="https://github.com/danizita921" class="btn btn-1">Github</a>
-            <a href="hazik.html" class="btn btn-1">Játékok</a>
+            <a href="hazik.html" class="btn btn-1">Amőba</a>
             <a href="órarend.html" class="btn btn-1">Órarend</a>
         </div>
     </div>
